[#81] Edit text for ideas/help/projects on main page

--- a/src/main/resources/static/views/main/Main.html
+++ b/src/main/resources/static/views/main/Main.html
@@ -13,31 +13,25 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
             <span class="fa fa-lightbulb-o fa-3x"></span>
             <h4>Ideas</h4>
-            <div><strong>Just Text Example</strong></div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.
+            <div>The idea is one of the most valuable products in the modern world. Add the idea to our database and
+                whole world will know about you, invest in one of our ideas and get the opportunity conquer the whole
+                world.
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
             <span class="glyphicon glyphicon glyphicon-grain gi-3x"></span>
             <h4>Help</h4>
-            <div><strong>Just Text Example</strong></div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.
+            <div>If you have any questions or difficulties using our site, there are errors, not enough information,
+                etc., contact us by phone or mail. Our specialists are ready to answer all your questions 24 hours a
+                day, 7 days a week.
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
             <span class="fa fa-users fa-3x"></span>
             <h4>Projects</h4>
-            <div><strong>Just Text Example</strong></div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.
+            <div>Projects that have been added to our database or moderated there are placed in the Projects catalog,
+                and sent to the Investors who have formulated their Investment Interests. Choose the best one for you
+                and let the dream come true.
             </div>
         </div>
     </div>
