--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -7,18 +7,26 @@
         </h4>
     </div>
     <div class="modal-body" id="modal-body">
-        <form role="form" ng-submit="submit()">
+        <form name="forgotPassForm" role="form" ng-submit="submit()">
             <div class="small">
-                <p style="line-height: normal">Please provide email address that you used when you signed up for your GreatStart account.</p>
+                <p style="line-height: normal">Please provide email address that you used when you signed up for your
+                    GreatStart account.</p>
                 <p style="line-height: normal">We will send you an email that will allow you to reset your password.</p>
+                <div class="alert alert-success centered" ng-show="message">
+                    {{message}}
+                </div>
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" placeholder="email" id="email" name="email"
                        ng-model="email" required/>
             </div>
-            <input type="submit" class="btn btn-success" value="Send reset link"/>
+            <div class="small">
+                <div class="alert alert-danger centered" ng-show="error">
+                    {{error}}
+                </div>
+            </div>
+            <input type="submit" class="btn btn-success btn-block" ng-show="!submitted" value="Send reset link"/>
         </form>
     </div>
-</div>
 </div>
