--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -7,7 +7,7 @@
         </h4>
     </div>
     <div class="modal-body" id="modal-body">
-        <form name="forgotPassForm" role="form" ng-submit="submit()">
+        <form name="forgotPassForm" role="form" ng-submit="submitEmail()">
             <div class="small">
                 <p style="line-height: normal">Please provide email address that you used when you signed up for your
                     GreatStart account.</p>
