Add mapping for investments list in project. Add project page. Mapped to controller, add modal.

--- a/src/main/resources/static/views/investment/Investments.html
+++ b/src/main/resources/static/views/investment/Investments.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="InvestmentController">
+<div class="container" ng-controller="InvestmentController" ng-init="getAllInvestments()">
 	<div class="row">
 		<h2>All investments:</h2>
 		<div class="col-xs-7 col-sm-5 col-md-4">
