[#82] Design About Us page

--- a/src/main/resources/static/views/main/About.html
+++ b/src/main/resources/static/views/main/About.html
@@ -1,5 +1,76 @@
-<div class="centered">
-    <h1>Here must be page with ABOUT</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">About "Startup Platform"
+                <small>It's Nice to Meet You!</small>
+            </h1>
+            <p>Invest in the world's most promising startups. Diversify your investment portfolio with insider access to
+                highly vetted startups from Silicon Valley and beyond in just minutes. Gain access to, review, and
+                invest in the most promising startups via our web and mobile-enabled startup investing platform. After
+                investing, keep up to date with news, updates, and portfolio analysis features. Easily diversify your
+                portfolio with low minimums. If you want to invest in the future, you invest in startups. Startup
+                investment can be risky, yet rewarding business. No need to go to Silicon Valley. Find out how you can
+                take your first steps in investment, or connect to seasoned venture capitalists. "Startup Platform"
+                provides a platform for start-up, early and growth stage businesses to raise finance from professional
+                investors, high-net worths, VC firms, everyday investors and your own community. From banks and
+                breweries to the latest cleantech company or consumer brand, all types of businesses can raise on
+                "Startup Platform". Start a pitch and a member of our team will be able to advise you further as to the
+                suitability of your business for raising finance via "Startup Platform".</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <h2 class="page-header">Our Team</h2>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/DenysA.png" alt="">
+            <h3>Denys Azhymov
+            </h3>
+            <p>Sole of our company</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/DenysS.png" alt="">
+            <h3>Denys Sheptytskyi
+            </h3>
+            <p>Boss of our company</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/Evgenyi.png" alt="">
+            <h3>Evgenyi Salty
+            </h3>
+            <p>Secret agent of our company</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/Igor.png" alt="">
+            <h3>Garik Privalov
+            </h3>
+            <p>Admin of our company</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/Max.jpg" alt="">
+            <h3>Maxim Semyonov
+            </h3>
+            <p>Support of our company</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/Oleksii.png" alt="">
+            <h3>Oleksii Rudenko
+            </h3>
+            <p>Technical Specialist of our company</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/Vlad.png" alt="">
+            <h3>Vladimir Kryshtalov
+            </h3>
+            <p>Brain of our company</p>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+            <img class="img-circle img-responsive img-center" src="img/Zakhar.png" alt="">
+            <h3>Zakhar Kyrychenko
+            </h3>
+            <p>Manager of Public Relations of our company</p>
+        </div>
+    </div>
 </div>
 
 <div ng-include="'views/main/Footer.html'"></div>
