--- a/src/main/resources/static/views/main/CreateAccount.html
+++ b/src/main/resources/static/views/main/CreateAccount.html
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <div class="btn-group">
                     <button class="btn btn-success" type="submit">{{!user.id ? 'Create' :'Save'}}</button>
-                    <a class="btn btn-danger" ng-href="#!/user/{{user.id}}">Cancel</a>
+                    <a class="btn btn-danger" ng-href="#!/">Cancel</a>
                 </div>
             </div>
         </div>
