Add investments in UserPage. Add ignore user photo and project image on mapping

--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -49,8 +49,8 @@
 			</div>
 			<!--Investments-->
 			<!--todo: hide investments if user is not project owner	-->
-			<!--<div ng-if="currentUser!=null && currentUser.email == project.owner.email">-->
-			<div ng-if="authenticated">
+			<div ng-if="currentUser!=null && currentUser.email == project.owner.email">
+			<!--<div ng-if="authenticated">-->
 				<div class="item">
 					<div class="thumbnail">
 						<div class="caption">
