--- a/src/main/resources/static/views/user/UserPage.html
+++ b/src/main/resources/static/views/user/UserPage.html
@@ -279,9 +279,9 @@
 				</div>
 			</div>
 		</div>
-		<!--<div ng-if="currentUser!=null && currentUser.email == project.owner.email">-->
-		<div ng-include="'views/investment/UserInvestments.html'"></div>
-		<!--</div>-->
+		<div class="bs-calltoaction bs-calltoaction-success">
+			<div ng-include="'views/investment/UserInvestments.html'"></div>
+		</div>
 	</div>
 </div>
 <div ng-include="'views/main/Footer.html'"></div>
