--- a/src/main/resources/static/views/user/ChangePassword.html
+++ b/src/main/resources/static/views/user/ChangePassword.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container"  ng-init="deauth()">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
                 <div class="small alert alert-success centered" ng-show="message">
