Modal window add

--- a/src/main/resources/static/views/project/ApproveCreateInvestmentModal.html
+++ b/src/main/resources/static/views/project/ApproveCreateInvestmentModal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modal-invest" ng-controller="ProjectController">
+<div class="modal fade" ng-controller="ProjectController" ng-init="">
 	<div class="modal-dialog">
 		<div class="modal-content ">
 			<div class="modal-header">
