--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -75,9 +75,9 @@
 							<h4 class="text-right">Project need ${{project.desc.cost-investedAmount}}</h4>
 						</div>
 						<div class="panel-footer">
-							<button type="button" class="btn btn-success btn-block" data-toggle="modal"
-							        data-target="#modal-invest">I
-								want to invest
+							<!--todo modal window popup-->
+							<button type="button" class="btn btn-success btn-block" ng-click="openModal()">
+								I want to invest
 							</button>
 						</div>
 					</div>
@@ -101,10 +101,10 @@
 						</div>
 						<h5>Project need ${{project.desc.cost-investedAmount}}</h5>
 					</div>
+					<!--todo modal window popup-->
 					<div class="panel-footer">
-						<button type="button" class="btn btn-success btn-block" data-toggle="modal"
-						        data-target="#modal-invest">I
-							want to invest
+						<button type="button" class="btn btn-success btn-block" ng-click="openModal()">
+							I want to invest
 						</button>
 					</div>
 				</div>
