--- a/src/main/resources/static/views/main/CreateAccount.html
+++ b/src/main/resources/static/views/main/CreateAccount.html
@@ -1,5 +1,41 @@
-<div class="centered">
-    <h1>Here must be page with CREATE ACCOUNT</h1>
+<div class="container" ng-controller="RegisterController">
+    <div class="row">
+        <div ng-show="error">
+            <div class="alert alert-danger">Wrong email or Password or such user already exist</div>
+        </div>
+        <div class="col-md-offset-3 col-md-6 col-xs-12">
+            <form class="form-horizontal" role="form" ng-submit="submit()" id="createUser">
+                <input type="hidden" ng-model="user.id">
+                <div class="col-md-offset-1 col-xs-12">
+                    <div class="form-group">
+                        <label for="email" class="col-xs-3 control-label">Email:</label>
+                        <div class="col-xs-9">
+                            <input type="text" ng-model="user.email" placeholder="username@example.com"
+                                   class="form-control input-md" id="email"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="col-xs-3 control-label">Password:</label>
+                        <div class="col-xs-9">
+                            <input type="password" ng-model="user.password" class="form-control input-md"
+                                   id="password"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmPassword" class="col-xs-3 control-label">Confirm Password:</label>
+                        <div class="col-xs-9">
+                            <input type="password" ng-model="user.confirmPassword" class="form-control input-md"
+                                   id="confirmPassword"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="btn-group">
+                            <button class="btn btn-success" type="submit">{{!user.id ? 'Create' :'Save'}}</button>
+                            <a class="btn btn-danger" ng-href="#!/">Cancel</a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
-
-<div ng-include="'views/main/Footer.html'"></div>
