Edit project basics

--- a/src/main/resources/static/views/project/Projects.html
+++ b/src/main/resources/static/views/project/Projects.html
@@ -6,7 +6,7 @@
                 <div class="item">
                     <div class="thumbnail">
                         <div class="caption centered">
-                            <a href="/project/{{project.id}}"><h3>{{project.desc.name}}</h3></a>
+                            <a href="#!/project/{{project.id}}"><h3>{{project.desc.name}}</h3></a>
                         </div>
                         <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
                         <div class="caption">
