Add create investment modal window with data binding, implement transfer from approve model window to create investment modal window

--- a/src/main/resources/static/views/project/ProjectPage.html
+++ b/src/main/resources/static/views/project/ProjectPage.html
@@ -76,7 +76,7 @@
 						</div>
 						<div class="panel-footer">
 							<!--todo modal window popup-->
-							<button type="button" class="btn btn-success btn-block" ng-click="openModal()">
+							<button type="button" class="btn btn-success btn-block" ng-click="openApproveModal()">
 								I want to invest
 							</button>
 						</div>
@@ -101,9 +101,8 @@
 						</div>
 						<h5>Project need ${{project.desc.cost-investedAmount}}</h5>
 					</div>
-					<!--todo modal window popup-->
 					<div class="panel-footer">
-						<button type="button" class="btn btn-success btn-block" ng-click="openModal()">
+						<button type="button" class="btn btn-success btn-block" ng-click="openApproveModal()">
 							I want to invest
 						</button>
 					</div>
