--- a/src/main/resources/static/views/investment/add_investment.html
+++ b/src/main/resources/static/views/investment/add_investment.html
@@ -1,41 +1,34 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-lg-offset-3" style="margin-top: 50px;">
-            <div class="panel-card panel-success-card">
-                <div class="text-center"><h3>Add an investment</h3></div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="text-center">
-                                <p>Here you can add you investment in <u>Project</u></p>
-                                <p>Total investment needed: <u>100000</u>
-                                    <span class="fa fa-usd" aria-hidden="true"></span>
-                                </p>
-                                <p>Minimal investment: <u>5000</u>
-                                    <span class="fa fa-usd" aria-hidden="true"></span>
-                                </p>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-4 col-lg-4" for="amount"></label>
-                                <div class="col-xs-12 col-md-6 col-lg-4" style="margin-bottom: 25px">
-                                    <input id="amount" name="amountInvestment" type="number" placeholder="Amount of investment"
-                                           class="form-control input-md">
-                                </div>
-                            </div>
-                            <div class="form-group centered">
-                                <label class="col-md-4 control-label" for="singlebutton"></label>
-                                <div class="col-xs-12" style="margin-bottom: 5px">
-                                    <a href="#">
-                                        <button id="singlebutton" name="singlebutton" style="width: 85px"
-                                                class="btn btn-success">Submit
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div ng-controller="InvestmentController">
+	<div class="modal-header">
+		<button class="close" type="button" ng-click="closeInvestmentModal()">
+			<span class="fa fa-close"></span>
+		</button>
+		<h3 class="modal-title">Add an investment</h3>
+	</div>
+	<div class="modal-body">
+		<p>Here you can add you investment in "{{project.desc.name}}"</p>
+		<p>Total investment needed: {{project.desc.cost - investedAmount}}</p>
+		<p>Minimal investment: {{project.desc.minInvestment}}</p>
+		<div>
+			<div class="form-group">
+				<input type="number"
+				       name="sum"
+				       placeholder="Amount of investment"
+				       min="{{project.desc.minInvestment}}"
+				       max="{{project.desc.cost-investedAmount}}"
+				       step="{{project.desc.minInvestment}}"/>
+				<!--<input type="number" placeholder="Amount of investment"
+				       class="form-control input-md">-->
+			</div>
+		</div>
+		<div class="form-group centered">
+			<div style="margin-bottom: 5px">
+				<a href="#">
+					<button id="singlebutton" name="singlebutton" style=""
+					        class="btn btn-success">Submit
+					</button>
+				</a>
+			</div>
+		</div>
+	</div>
 </div>
