--- a/src/main/resources/static/views/project/EditProject.html
+++ b/src/main/resources/static/views/project/EditProject.html
@@ -16,8 +16,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                                 <div class="cropArea">
-                                    <img-crop image="projectImage" result-image="projectCroppedImage"
-                                              result-image-size="320" on-load-begin="123"></img-crop>
+                                    <img-crop image="projectImage" result-image="projectCroppedImage" area-type="rectangle"></img-crop>
                                 </div>
                                 <div>
                                     <label class="btn btn-default btn-file">
