login modal closes when forgot pass modal opens

--- a/src/main/resources/static/views/main/ForgotPassword.html
+++ b/src/main/resources/static/views/main/ForgotPassword.html
@@ -1,7 +1,7 @@
 <div ng-controller="PasswordResetController">
     <div class="modal-header">
         <h4 class="modal-title">Reset password
-            <button class="close" type="button" ng-click="close()">
+            <button class="close" type="button" ng-click="closeFpModal()">
                 <span class="fa fa-close"></span>
             </button>
         </h4>
